# NRI

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  1-Deploy.bat  1-Deploy.sh  2-Build.bat  2-Build.sh  3-Prepare NRI SDK.bat  3-Prepare NRI SDK.sh  4-Clean.bat  4-Clean.sh  CMakeLists.txt  Dependencies.xml  ProgrammingGuide.md  README.md  nri.natvis
.github/workflows/: build.yml
Include/: NRI.h  NRICompatibility.hlsli  NRIDescs.h  NRIDescs.hpp  NRIMacro.h
Include/Extensions/: NRIDeviceCreation.h  NRIHelper.h  NRILowLatency.h  NRIMeshShader.h  NRIRayTracing.h  NRIResourceAllocator.h  NRIStreamer.h  NRISwapChain.h  NRITiling.h  NRIWrapperD3D11.h  NRIWrapperD3D12.h  NRIWrapperMTL.h  NRIWrapperVK.h
Include/Extensions/Optional/: NRIGfxApiWrapper.h  NRIStreamlineWrapper.h
Resources/: NRI.rc  Version.h
Source/Creation/: Creation.cpp  Creation.mm
Source/D3D11/: BufferD3D11.cpp  BufferD3D11.h  BufferD3D11.hpp  CommandAllocatorD3D11.cpp  CommandAllocatorD3D11.h  CommandAllocatorD3D11.hpp  CommandBufferD3D11.cpp  CommandBufferD3D11.h  CommandBufferD3D11.hpp  CommandBufferEmuD3D11.cpp  CommandBufferEmuD3D11.h  CommandBufferEmuD3D11.hpp  CommandQueueD3D11.cpp  CommandQueueD3D11.h  CommandQueueD3D11.hpp  D3D11Extensions.cpp  D3D11Extensions.h  DescriptorD3D11.cpp  DescriptorD3D11.h  DescriptorD3D11.hpp  DescriptorPoolD3D11.cpp  DescriptorPoolD3D11.h  DescriptorPoolD3D11.hpp  DescriptorSetD3D11.cpp  DescriptorSetD3D11.h  DescriptorSetD3D11.hpp  DeviceD3D11.cpp  DeviceD3D11.h  DeviceD3D11.hpp  DeviceSemaphoreD3D11.cpp  DeviceSemaphoreD3D11.h  DeviceSemaphoreD3D11.hpp  FenceD3D11.cpp  FenceD3D11.h  FenceD3D11.hpp  FrameBufferD3D11.cpp  FrameBufferD3D11.h  FrameBufferD3D11.hpp  ImplD3D11.cpp  MemoryD3D11.cpp  (+25 more)
Source/D3D12/: AccelerationStructureD3D12.cpp  AccelerationStructureD3D12.h  AccelerationStructureD3D12.hpp  BufferD3D12.cpp  BufferD3D12.h  BufferD3D12.hpp  CommandAllocatorD3D12.cpp  CommandAllocatorD3D12.h  CommandAllocatorD3D12.hpp  CommandBufferD3D12.cpp  CommandBufferD3D12.h  CommandBufferD3D12.hpp  CommandQueueD3D12.cpp  CommandQueueD3D12.h  CommandQueueD3D12.hpp  ConversionD3D12.cpp  DescriptorD3D12.cpp  DescriptorD3D12.h  DescriptorD3D12.hpp  DescriptorPoolD3D12.cpp  DescriptorPoolD3D12.h  DescriptorPoolD3D12.hpp  DescriptorSetD3D12.cpp  DescriptorSetD3D12.h  DescriptorSetD3D12.hpp  DeviceD3D12.cpp  DeviceD3D12.h  DeviceD3D12.hpp  DeviceSemaphoreD3D12.cpp  DeviceSemaphoreD3D12.h  FenceD3D12.cpp  FenceD3D12.h  FenceD3D12.hpp  FrameBufferD3D12.cpp  FrameBufferD3D12.h  ImplD3D12.cpp  MemoryD3D12.cpp  MemoryD3D12.h  MemoryD3D12.hpp  PipelineD3D12.cpp  (+25 more)
Source/Metal/: BufferMTL.h  BufferMTL.mm  BufferMetal.h  CommandAllocatorMTL.h  CommandAllocatorMTL.hpp  CommandAllocatorMTL.mm  CommandBufferMTL.h  CommandBufferMTL.hpp  CommandBufferMTL.mm  CommandQueueMTL.h  CommandQueueMTL.mm  ConversionMTL.h  ConversionMTL.mm  DescriptorMTL.h  DescriptorMTL.mm  DescriptorPoolMTL.h  DescriptorPoolMTL.mm  DescriptorSetMTL.h  DescriptorSetMTL.mm  DeviceMTL.h  DeviceMTL.hpp  DeviceMTL.mm  DeviceMetal.h  DeviceMetal.hpp  DeviceMetal.mm  FencMTL.mm  FenceMTL.h  ImplMTL.mm  MemoryMTL.h  MemoryMTL.mm  PipelineLayoutMTL.h  PipelineLayoutMTL.mm  PipelineMTL.h  PipelineMTL.mm  SharedMTL.h  SwapChainMTL.h  SwapChainMTL.mm  TextureMTL.h  TextureMTL.mm
Source/NONE/: ImplNONE.cpp
Source/Shared/: D3DExt.h  D3DExt.hpp  DeviceBase.h  HelperDataUpload.cpp  HelperDataUpload.h  HelperDataUpload.hpp  HelperDeviceMemoryAllocator.cpp  HelperDeviceMemoryAllocator.h  HelperDeviceMemoryAllocator.hpp  HelperResourceStateChange.cpp  HelperResourceStateChange.h  HelperWaitIdle.cpp  HelperWaitIdle.h  HelperWaitIdle.hpp  Lock.h  Shared.cpp  SharedExternal.cpp  SharedExternal.h  SharedExternal.hpp  SharedLibrary.cpp  SharedLibrary.hpp  StdAllocator.h  Streamer.cpp  Streamer.h  Streamer.hpp
Source/Streamline/: GfxApiWrapper.cpp  StreamlineWrapper.cpp
Source/VK/: AccelerationStructureVK.cpp  AccelerationStructureVK.h  AccelerationStructureVK.hpp  AcceleratrionStructureVK.hpp  BufferVK.cpp  BufferVK.h  BufferVK.hpp  CommandAllocatorVK.cpp  CommandAllocatorVK.h  CommandAllocatorVK.hpp  CommandBufferVK.cpp  CommandBufferVK.h  CommandBufferVK.hpp  CommandQueueVK.cpp  CommandQueueVK.h  CommandQueueVK.hpp  ConversionVK.cpp  ConversionVK.h  ConversionVK.hpp  DescriptorPoolVK.cpp  DescriptorPoolVK.h  DescriptorPoolVK.hpp  DescriptorSetVK.cpp  DescriptorSetVK.h  DescriptorSetVK.hpp  DescriptorVK.cpp  DescriptorVK.h  DescriptorVK.hpp  DeviceSemaphoreVK.cpp  DeviceSemaphoreVK.h  DeviceSemaphoreVK.hpp  DeviceVK.cpp  DeviceVK.h  DeviceVK.hpp  DispatchTable.h  FenceVK.cpp  FenceVK.h  FenceVK.hpp  FrameBufferVK.cpp  FrameBufferVK.h  (+28 more)
Source/Validation/: AccelerationStructureVal.cpp  AccelerationStructureVal.h  AccelerationStructureVal.hpp  BufferVal.cpp  BufferVal.h  BufferVal.hpp  CommandAllocatorVal.cpp  CommandAllocatorVal.h  CommandAllocatorVal.hpp  CommandBufferVal.cpp  CommandBufferVal.h  CommandBufferVal.hpp  CommandQueueVal.cpp  CommandQueueVal.h  CommandQueueVal.hpp  ConversionVal.cpp  ConversionVal.hpp  DescriptorPoolVal.cpp  DescriptorPoolVal.h  DescriptorPoolVal.hpp  DescriptorSetVal.cpp  DescriptorSetVal.h  DescriptorSetVal.hpp  DescriptorVal.cpp  DescriptorVal.h  DescriptorVal.hpp  DeviceSemaphoreVal.cpp  DeviceSemaphoreVal.h  DeviceSemaphoreVal.hpp  DeviceVal.cpp  DeviceVal.h  DeviceVal.hpp  FenceVal.cpp  FenceVal.h  FenceVal.hpp  FrameBufferVal.cpp  FrameBufferVal.h  FrameBufferVal.hpp  ImplVal.cpp  MemoryVal.cpp  (+24 more)
